--- a/project-details2.html
+++ b/project-details2.html
@@ -98,7 +98,7 @@
               <li><strong>Category</strong>: Web Design & Development</li>
               <li><strong>For</strong>: PCCOE&R</li>
               <li><strong>Project date</strong>: February, 2020</li>
-              <li><strong>Project URL</strong>: <a href="http://technovate2020.in/">technovate2020.in</a></li>
+              <li><strong>Project URL</strong>: <a href="https://vibrus.github.io/technovate2020/">technovate2020.in</a></li>
             </ul>
           </div>
 
