--- a/index.html
+++ b/index.html
@@ -361,6 +361,19 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
+            
+            <div class="resume-item">
+              <h4>Associate Software Engineer - Development</h4>
+              <h5>2021 - </h5>
+              <p><em>MediaOcean Asia Pvt. Ltd.</em></p>
+              <ul>
+                <li>Working on Full-Stack Development</li>
+                <li>at: <a href="https://www.mediaocean.com/">mediaocean.com</a></li>
+                <!-- <li>Recommended and consulted with clients on the most appropriate graphic design</li>
+                <li>Created 4+ design presentations and proposals a month for clients and account managers</li> -->
+              </ul>
+            </div>
+            
             <div class="resume-item">
               <h4>Intern</h4>
               <h5>2020</h5>
