--- a/project-details4.html
+++ b/project-details4.html
@@ -98,14 +98,14 @@
               <li><strong>Category</strong>: ChatBot Development</li>
               <li><strong>Client</strong>: PCCOE&R</li>
               <li><strong>Project date</strong>: May, 2020</li>
-              <li><strong>Project URL</strong>: <a href="https://vibrus.github.io/technospark/">TechnoSpark2020</a></li>
+              <li><strong>Project URL</strong>: <a href="https://assistant.google.com/services/a/uid/000000f5b20c5445?hl=en">PCCOER Compitron</a></li>
             </ul>
           </div>
 
         </div>
 
         <div class="portfolio-description">
-          <h2>Website development as a part of <em>Internship!</em></h2>
+          <h2>Website development as a part of <em>College Project.</em></h2>
           <p>
             <ul>
               <li>PCCOER COMPITRON is a chat-bot that is currently active on Google Assistant on Android devices across India. </li>
