--- a/project-details5.html
+++ b/project-details5.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Project Details-5</title>
+  <title>Project Details-CopyGram</title>
   <link rel="shortcut icon" type="image/png" href="assets/img/VS.png" />
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -52,7 +52,7 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="index.html#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="index.html#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="index.html#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
+          <li><a href="index.html#portfolio"><i class="bx bx-book-content"></i> Projects</a></li>
           <li><a href="index.html#services"><i class="bx bx-server"></i> Services</a></li>
           <li><a href="index.html#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
@@ -97,15 +97,15 @@
             <ul>
               <li><strong>Category</strong>: Web & App Development</li>
               <li><strong>For</strong>: PCCOE&R</li>
-              <li><strong>Project date</strong>: February, 2020</li>
-              <li><strong>Project URL</strong>: <a href="http://technovate2020.in/">technovate2020.in</a></li>
+              <li><strong>Project date</strong>: August, 2019</li>
+              <li><strong>Project URL</strong>: <a href="#">CopyGram</a></li>
             </ul>
           </div>
 
         </div>
 
         <div class="portfolio-description">
-          <h2>Technovate 2020 website</em></h2>
+          <h2>Project Developed for College for subject, <em>SDL</em></h2>
           <p>
             <ul>
             <li>This is an app that allows user to upload their documents from the mobile phone through the app.</li> 
