--- a/project-details6.html
+++ b/project-details6.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Project Details-6</title>
+  <title>Project Details-Coder'Stack</title>
   <link rel="shortcut icon" type="image/png" href="assets/img/VS.png" />
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -52,7 +52,7 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="index.html#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="index.html#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="index.html#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
+          <li><a href="index.html#portfolio"><i class="bx bx-book-content"></i>Projects</a></li>
           <li><a href="index.html#services"><i class="bx bx-server"></i> Services</a></li>
           <li><a href="index.html#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
@@ -96,7 +96,7 @@
             <h3>Project information</h3>
             <ul>
               <li><strong>Category</strong>: Web Design & Development</li>
-              <li><strong>For</strong>: PCCOE&R</li>
+              <li><strong>For</strong>: Self</li>
               <li><strong>Project date</strong>: June, 2020</li>
               <li><strong>Project URL</strong>: <a href=""><i>Under Development</i></a></li>
             </ul>
