--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
               <img src="assets/img/portfolio/portfolio-8.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-8.png" data-gall="portfolioGallery" class="venobox" title="Other 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-details7.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -503,7 +503,7 @@
               <img src="assets/img/portfolio/portfolio-9.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-9.png" data-gall="portfolioGallery" class="venobox" title="Other 4"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-details8.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -513,7 +513,7 @@
               <img src="assets/img/portfolio/portfolio-10.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-10.png" data-gall="portfolioGallery" class="venobox" title="Other 5"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-details9.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -523,7 +523,7 @@
               <img src="assets/img/portfolio/portfolio-11.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-11.png" data-gall="portfolioGallery" class="venobox" title="Other 6"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="portfolio-details10.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -533,7 +533,7 @@
                 <img src="assets/img/portfolio/portfolio-12.png" class="img-fluid" alt="">
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-12.png" data-gall="portfolioGallery" class="venobox" title="Other 6"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-details11.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
