--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <ul>
                   
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 22 March 1999</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 75079 14710</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> ----</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> vibrus77@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Dhule, Maharashtra</li>
                 </ul>
