--- a/index.html
+++ b/index.html
@@ -258,16 +258,16 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Adobe XD / Figma <i class="val">95%</i></span>
+              <span class="skill">React.js <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Adobe Photoshop <i class="val">90%</i></span>
+              <span class="skill">Adobe XD / Figma <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -297,9 +297,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Python <i class="val">60%</i></span>
+              <span class="skill">Java Spring Boot <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -330,7 +330,7 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Vishal Sonar</h4>
+              <h4>Vishal R. Sonar</h4>
               <p><em>.</em></p>
               <ul>
                 <li>Dhule, Maharashtra</li>
@@ -395,7 +395,7 @@
               <p><em>PCCOER ACM Student Chapter</em></p>
               <ul>
                 <li>PCCOER has it's own ACM local student chapter which organize and arrange technical as well as non-technical activites in college.</li>
-                <li>Refer the link: <a href="http://pccoer.acm.org/">pccoer.acm.org</a></li>
+                <li>Refer the link: <a href="http://pccoer.acm.org/teams/2019/">pccoer.acm.org</a></li>
                 <!-- <li>Recommended and consulted with clients on the most appropriate graphic design</li>
                 <li>Created 4+ design presentations and proposals a month for clients and account managers</li> -->
               </ul>
