--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img2.png" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/VS-profile.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Vishal Sonar</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/ViBRUS7" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
