updated meta info

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
   <title>Vishal Sonar Portfolio</title>
   <link rel="shortcut icon" type="image/png" href="assets/img/VS.png" />
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <!-- Meta tags -->
+  <meta name="description" content="Portfolio site for Vishal Sonar, Web Developer">
+  <meta name="keywords" content="Vishal Sonar, Vishal Sonar Portfolio, vishal sonar pune, web developer, react developer, fullstack developer, portfolio site template, pccoer, mediaocean">
+  <meta name="author" content="Vishal Sonar">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
