--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>A final year undergraduate computer engineering student at PCCOE&R, following his passion to become a web/software developer. Interested in UI/UX designing, website, application designing, and developing.</p>
+          <p>Computer engineer graduated from PCCOE&R, Pune.
+            Currently working as <em>Software Engineer - Development</em> at Mediaocean, Pune.
+          </p>
         </div>
 
         <div class="row">
@@ -90,9 +92,10 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <!-- <h3>A Computer Engineer &amp; Web Developer.</h3> -->
-            <h3>A Computer Engineer.</h3>
+            <h3>A Full-Stack Developer.</h3>
             <p class="font-italic">
-              Born in a village and brought up to a tier-2 city, and now completing higher education in a metropolitan city. 
+              Born in a village and brought up to a tier-2 city, completed higher education in a metropolitan city, and now working as
+              a software developer in one of the best ad-Tech company. 
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -106,7 +109,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>College Name:</strong> PCCOE&R, Pune</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>College:</strong> PCCOE&R, Pune</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.E.</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Branch:</strong> Computer Engineering</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Zip Code:</strong> 424 001</li>
@@ -131,7 +134,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Facts</h2>
+          <h2>College Life</h2>
           <p>Worked under and for multiple clubs in college to manage and handle events.</p>
         </div>
 
@@ -246,16 +249,16 @@
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">80%</i></span>
+              <span class="skill">CSS <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">70%</i></span>
+              <span class="skill">JavaScript <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -365,14 +368,22 @@
             <h3 class="resume-title">Professional Experience</h3>
             
             <div class="resume-item">
-              <h4>Associate Software Engineer - Development</h4>
-              <h5>2021 - </h5>
+              <h4>Software Engineer - Development</h4>
+              <h5>2023 - </h5>
               <p><em>MediaOcean Asia Pvt. Ltd.</em></p>
               <ul>
                 <li>Working on Full-Stack Development</li>
                 <li>at: <a href="https://www.mediaocean.com/">mediaocean.com</a></li>
-                <!-- <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li> -->
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>Associate Software Engineer - Development</h4>
+              <h5>2021 - 2023</h5>
+              <p><em>MediaOcean Asia Pvt. Ltd.</em></p>
+              <ul>
+                <li>Joined the company as a fresher, learnt required technologies, and applied that to solve industry-level problems</li>
+                <li>at: <a href="https://www.mediaocean.com/">mediaocean.com</a></li>
               </ul>
             </div>
             
