--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Vishal R. Sonar</h1>
-      <p>I'm a <span class="typed" data-typed-items="Designer., Developer., Freelancer., Photographer."></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Developer., Designer., Freelancer., Photographer."></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -378,7 +378,7 @@
           
             <div class="resume-item">
               <h4>Software Engineer - Development</h4>
-              <h5>2023 - </h5>
+              <h5>2023 - Present</h5>
               <h4>Associate Software Engineer - Development</h4>
               <h5>2021 - 2023</h5>
               <p><em>MediaOcean Asia Pvt. Ltd.</em></p>
@@ -463,7 +463,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.png" data-gall="portfolioGallery" class="venobox" title="Web 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-1.png" data-gall="portfolioGallery" class="venobox" title="TheervuBiz Website"><i class="bx bx-plus"></i></a>
                 <a href="project-details1.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -473,7 +473,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.png" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-2.png" data-gall="portfolioGallery" class="venobox" title="Technovate20 Website"><i class="bx bx-plus"></i></a>
                 <a href="project-details2.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -483,7 +483,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-3.png" data-gall="portfolioGallery" class="venobox" title="TechnoSpark 2020 Website"><i class="bx bx-plus"></i></a>
                 <a href="project-details3.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -493,7 +493,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.png" data-gall="portfolioGallery" class="venobox" title="Other 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-4.png" data-gall="portfolioGallery" class="venobox" title="PCCOER Compitron ChatBot"><i class="bx bx-plus"></i></a>
                 <a href="project-details4.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -503,7 +503,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.png" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-5.png" data-gall="portfolioGallery" class="venobox" title="CopyGram"><i class="bx bx-plus"></i></a>
                 <a href="project-details5.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -513,7 +513,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.png" data-gall="portfolioGallery" class="venobox" title="Web 4"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-6.png" data-gall="portfolioGallery" class="venobox" title="Coder'Stack"><i class="bx bx-plus"></i></a>
                 <a href="project-details6.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -523,7 +523,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.png" data-gall="portfolioGallery" class="venobox" title="Other 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-8.png" data-gall="portfolioGallery" class="venobox" title="Social Media Spent Analysis Dashboard"><i class="bx bx-plus"></i></a>
                 <a href="project-details7.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -533,7 +533,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.png" data-gall="portfolioGallery" class="venobox" title="Other 4"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-9.png" data-gall="portfolioGallery" class="venobox" title="Disease Prediction using Machine Learning"><i class="bx bx-plus"></i></a>
                 <a href="project-details8.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -543,7 +543,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-10.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-10.png" data-gall="portfolioGallery" class="venobox" title="Other 5"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-10.png" data-gall="portfolioGallery" class="venobox" title="JUnit Testing"><i class="bx bx-plus"></i></a>
                 <a href="project-details9.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -553,7 +553,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-11.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-11.png" data-gall="portfolioGallery" class="venobox" title="Other 6"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-11.png" data-gall="portfolioGallery" class="venobox" title="Selenium Testing"><i class="bx bx-plus"></i></a>
                 <a href="project-details10.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -563,7 +563,7 @@
               <div class="portfolio-wrap">
                 <img src="assets/img/portfolio/portfolio-12.png" class="img-fluid" alt="">
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-12.png" data-gall="portfolioGallery" class="venobox" title="Other 6"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-12.png" data-gall="portfolioGallery" class="venobox" title="Hackathon Problem Solving"><i class="bx bx-plus"></i></a>
                   <a href="project-details11.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -573,7 +573,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.png" data-gall="portfolioGallery" class="venobox" title="Other 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-7.png" data-gall="portfolioGallery" class="venobox" title="Poster Gallery"><i class="bx bx-plus"></i></a>
                 <a href="https://drive.google.com/drive/folders/1YCHJJgJTv4oAUOp_2kxAAmrOe6z07QIN?usp=sharing" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
