--- a/project-details10.html
+++ b/project-details10.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Project Details-2</title>
+  <title>Project Details- JUnit Testing</title>
   <link rel="shortcut icon" type="image/png" href="assets/img/VS.png" />
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -49,9 +49,9 @@
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="index.html#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="index.html#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span> Home</span></a></li>
+          <li><a href="index.html#about"><i class="bx bx-user"></i> <span> About</span></a></li>
+          <li><a href="index.html#resume"><i class="bx bx-file-blank"></i> <span> Resume</span></a></li>
           <li><a href="index.html#portfolio"><i class="bx bx-book-content"></i> Projects</a></li>
           <li><a href="index.html#services"><i class="bx bx-server"></i> Services</a></li>
           <li><a href="index.html#contact"><i class="bx bx-envelope"></i> Contact</a></li>
@@ -87,31 +87,26 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/work-2-1.png" class="img-fluid" alt="technovate-1">
-            <img src="assets/img/work-2-1.png" class="img-fluid" alt="technovate-2">
-            <img src="assets/img/work-2-1.png" class="img-fluid" alt="technovate-3">
+            <img src="assets/img/portfolio/portfolio-11.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-11.png" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web Design & Development</li>
+              <li><strong>Category</strong>: Selenium Testing</li>
               <li><strong>For</strong>: PCCOE&R</li>
-              <li><strong>Project date</strong>: February, 2020</li>
-              <li><strong>Project URL</strong>: <a href="https://vibrus.github.io/technovate2020/">technovate2020.in</a></li>
+              <li><strong>Project date</strong>: May, 2021</li>
             </ul>
           </div>
 
         </div>
 
         <div class="portfolio-description">
-          <h2>Technovate 2020 website</em></h2>
+          <h2><em>Mini Project for</em> Testing in Selenium</h2>
           <p>
+          <h3>Objectives of the Project -</h3>
             <ul>
-            <li>Technovate is an official event of PCET's Pimpri Chinchwad College of Engineering and Research, Ravet.</li> 
-            <li>We designed an informative and interactive website for the event.</li>
-            <li>You can check the link given below for the same...</li>
-            <a href="https://vibrus.github.io/technovate2020/">technovate2020.in</a>
             </ul>
           </p>
         </div>
