Added project screenshots

--- a/index.html
+++ b/index.html
@@ -702,6 +702,7 @@
       </div>
     </section><!-- End Contact Section -->
 
+    <div align=left><a href='vibrus.github.io/index.html'><img src='https://www.counter12.com/img-DWcZ7DWzZ9Z8ZDW3-59.gif' border='0' alt='counter'></a><script type='text/javascript' src='https://www.counter12.com/ad.js?id=DWcZ7DWzZ9Z8ZDW3'></script></div>
   </main><!-- End #main -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
