--- a/index.html
+++ b/index.html
@@ -379,8 +379,10 @@
             <h3 class="resume-title">Professional Experience</h3>
           
             <div class="resume-item">
+              <h4>Senior Software Engineer - Development</h4>
+              <h5>2025 - Present</h5>
               <h4>Software Engineer - Development</h4>
-              <h5>2023 - Present</h5>
+              <h5>2023 - 2025</h5>
               <h4>Associate Software Engineer - Development</h4>
               <h5>2021 - 2023</h5>
               <p><em>MediaOcean Asia Pvt. Ltd.</em></p>
