--- a/index.html
+++ b/index.html
@@ -1116,11 +1116,11 @@
                   <p>...</p>
                 </div>
                 <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3780.3079056786864!2d73.74307771420604!3d18.650174070066843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2ba0251959e2d%3A0x4d7ea2cc35724480!2sPimpri%20Chinchwad%20College%20Of%20Engineering%20and%20Research(PCCOER)%2CRavet!5e0!3m2!1sen!2sin!4v1624019430098!5m2!1sen!2sin"
-                        style="border: none; width: 100%; height: 290px;"
-                        allowfullscreen=""
-                        loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3780.3079056786864!2d73.74307771420604!3d18.650174070066843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2ba0251959e2d%3A0x4d7ea2cc35724480!2sPimpri%20Chinchwad%20College%20Of%20Engineering%20and%20Research(PCCOER)%2CRavet!5e0!3m2!1sen!2sin!4v1624019430098!5m2!1sen!2sin"
+                  style="border: none; width: 100%; height: 290px"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
                 ></iframe>
               </div>
             </div>
@@ -1198,11 +1198,11 @@
       </section>
       <!-- End Contact Section -->
 
-      <div style="text-align: left;">
+      <div style="text-align: left">
         <a href="index.html"
           ><img
             src="https://www.counter12.com/img-DWcZ7DWzZ9Z8ZDW3-59.gif"
-            style="border: none;"
+            style="border: none"
             alt="counter"
         /></a>
         <script
