--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="profile">
           <img
             src="assets/img/VS-profile.png"
-            alt=""
+            alt="Vishal Sonar"
             class="img-fluid rounded-circle"
           />
           <h1 class="text-light"><a href="index.html">Vishal Sonar</a></h1>
@@ -160,7 +160,7 @@
               <img
                 src="assets/img/VS_PROFILE_NEW.png"
                 class="img-fluid"
-                alt=""
+                alt="Vishal Sonar"
               />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
