--- a/project-details8.html
+++ b/project-details8.html
@@ -49,13 +49,7 @@
 
       <nav class="nav-menu">
         <ul>
-          <li><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="index.html#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="index.html#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li class="active"><a href="index.html#portfolio"><i class="bx bx-book-content"></i> Projects</a></li>
-          <li><a href="index.html#services"><i class="bx bx-server"></i> Services</a></li>
-          <li><a href="index.html#contact"><i class="bx bx-envelope"></i> Contact</a></li>
-
+          <li><a href="index.html"><i class='bx bx-arrow-back'></i>Back to Home page</a></li>
         </ul>
       </nav><!-- .nav-menu -->
       <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
